tests/ui/feature-gates/feature-gate-cfi_encoding.stderr
error[E0658]: the `#[cfi_encoding]` attribute is an experimental feature
  --> $DIR/feature-gate-cfi_encoding.rs:3:1
   |
LL | #[cfi_encoding = "3Bar"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #89653 <https://github.com/rust-lang/rust/issues/89653> for more information
   = help: add `#![feature(cfi_encoding)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
